@@ -1,4 +1,4 @@
-.TH VIFM 1 "August 14, 2015" "vifm 0.8"
+.TH VIFM 1 "August 18, 2015" "vifm 0.8"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -438,6 +438,9 @@ restore all filters.
 .TP
 .BI zR
 remove all filters.
+.TP
+.BI zr
+remove local filter.
 .TP
 .BI zd
 exclude selection or current file from custom view.  Does nothing for regular
