@@ -38,6 +38,8 @@
 	options that are specific to current directory and are reset on directory
 	change, similar to local options of Vim.
 
+	Added zr normal mode key to reset local filter.  Thanks to filterfalse.
+
 	Do not finish argument parsing after finding --help or --version,
 	continue and validate the rest of command-line.  Thanks to Svyatoslav
 	Mishyn (a.k.a. juef).
